k8s/apps/nextcloud/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-redis
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-redis
  template:
    metadata:
      labels:
        app: nextcloud-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
              name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis-service
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
