k8s/apps/nextcloud/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.armleth.fr`)
      kind: Rule
      services:
        - name: nextcloud-service
          port: 80
  tls:
    secretName: nextcloud-tls-secret
